tests/fixtures/qml/reject/listview.qml
import QtQuick 2.15

Item {
    width: 200
    height: 200

    ListView {
        anchors.fill: parent
        model: 10
    }
}
